--- a/myself.html
+++ b/myself.html
@@ -46,15 +46,19 @@
     <img src="./wp9325526.jpg" alt="batman Dark Knight" />
 
     <p>More pictures for you here in the link down below</p>
-    <a href="#">More Photos</a>
+    <a href="photos.com">More Photos</a>
 
     <p>You want to contact me ? <br />Here is my</p>
     <ul>
-      <li><a href="rexselasetaylor@gmail.com">Email Address</a></li>
+      <li>
+        <a href="rexselasetaylor@gmail.com">
+          Email Address
+        </a>
+      </li>
       <li>
         <a href="https://web.facebook.com/selaserex.taylor.3"
-          target="_blank">Facebook profile</a
-        >
+          target="_blank">Facebook profile
+        </a>
       </li>
     </ul>
     <br />
