--- a/myself.html
+++ b/myself.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mywebsite</title>
+    <link rel="stylesheet" href="myself.css">
     <meta
       name="Description"
       content="This contains everything you need to know about me" />
@@ -46,7 +47,7 @@
     <img src="./wp9325526.jpg" alt="batman Dark Knight" />
 
     <p>More pictures for you here in the link down below</p>
-    <a href="photos.com">More Photos</a>
+    <a href="https://www.photos.com" target = "_blank">More Photos</a>
 
     <p>You want to contact me ? <br />Here is my</p>
     <ul>
@@ -54,6 +55,7 @@
         <a href="rexselasetaylor@gmail.com">
           Email Address
         </a>
+        
       </li>
       <li>
         <a href="https://web.facebook.com/selaserex.taylor.3"
@@ -62,5 +64,10 @@
       </li>
     </ul>
     <br />
+
+
+
+
+
   </body>
 </html>
