"still in progress"

--- a/myself.html
+++ b/myself.html
@@ -10,11 +10,11 @@
       content="This contains everything you need to know about me" />
   </head>
   <body>
-    <h1>MYSELF</h1>
+    <h1 class="Heading">MYSELF</h1>
     <br />
     <h2>INTRODUCTION</h2>
     <!-- First Section -->
-    <p>
+    <p class="firstParagraph">
       My name is Shamouah Kugblenu and everyone knows me as CodeBloodedGangster.
       I am a trader and Software Developer . I love to run and exercise when its
       morning to keep my body in shape . I am 6'1 by height, I was born in
@@ -22,7 +22,7 @@
       and i have been doing business ever since. I am learning to become a full
       stack developer in Node8 Ho.
     </p>
-    <h3>MY FAVORITE FOODS</h3>
+    <h3 >MY FAVORITE FOODS</h3>
 
     <ol>
       <li>Banku</li>
@@ -39,7 +39,7 @@
       <li>Running</li>
       <li>Writing Code</li>
     </ul>
-    <p>If you need to know more about me , <a href="#">Click Here</a></p>
+    <p class="secondParagraph">If you need to know more about me , <a href="#">Click Here</a></p>
 
     <h3>HERE ARE SOME PICTURES I LIKE</h3>
     <img src="./wp2598575.jpg" alt="cookie monster" />
